# image-hosting

./: .gitignore  CLAUDE.md  PLAN.md  README.md  docker-compose.yml
.serena/: project.yml
.serena/memories/: documentation_structure.md  project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 030671424d3e_add_is_admin_field_to_users_table.py  70f91bcc0381_create_users_and_images_tables.py  bb6db7cd097d_add_indexes_for_created_at_columns.py
backend/app/: config.py  database.py  dependencies.py  logging.py  main.py
backend/app/models/: __init__.py  image.py  user.py
backend/app/routers/: __init__.py  admin.py  auth.py  images.py
backend/app/schemas/: __init__.py  auth.py  image.py  user.py
backend/app/services/: __init__.py  auth.py  storage.py
backend/tests/: conftest.py  test_auth_security.py
backend/tests/integration/: test_admin_api.py  test_auth_api.py  test_images_api.py
backend/tests/unit/: test_admin_dependencies.py  test_auth_service.py  test_storage_service.py
docs/: architecture.md  development.md  environment.md  setup.md
docs/mockups/: stitch-prompts.txt
docs/reviews/: README.md  code-review-pr3-admin-features.md  code-review-pr5-frontend-core.md  security-review-pr4-backend-tests.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
scripts/: setup-local-db.sh
stitch_designs/empty_gallery_state/: code.html
(+18 files in other folders)
